--- a/Algorithm.vcxproj
+++ b/Algorithm.vcxproj
@@ -18,6 +18,16 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="Baekjoon\11720.cpp" />
+    <ClCompile Include="Baekjoon\14501.cpp" />
+    <ClCompile Include="Baekjoon\15649.cpp" />
+    <ClCompile Include="Baekjoon\2606.cpp" />
+    <ClCompile Include="Baekjoon\2839.cpp" />
+    <ClCompile Include="Tower of Implementation\01.cpp" />
+    <ClCompile Include="Tower of Implementation\02.cpp" />
+    <ClCompile Include="Tower of Implementation\03.cpp" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
@@ -126,16 +136,6 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <ClCompile Include="01.cpp" />
-    <ClCompile Include="02.cpp" />
-    <ClCompile Include="03.cpp" />
-    <ClCompile Include="11720.cpp" />
-    <ClCompile Include="14501.cpp" />
-    <ClCompile Include="15649.cpp" />
-    <ClCompile Include="2606.cpp" />
-    <ClCompile Include="2839.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
