--- a/Algorithm.vcxproj
+++ b/Algorithm.vcxproj
@@ -25,6 +25,9 @@
     <ClCompile Include="Baekjoon\15649.cpp" />
     <ClCompile Include="Baekjoon\2606.cpp" />
     <ClCompile Include="Baekjoon\2839.cpp" />
+    <ClCompile Include="Imp_07.cpp" />
+    <ClCompile Include="Imp_08.cpp" />
+    <ClCompile Include="Imp_09.cpp" />
     <ClCompile Include="Imp_10.cpp" />
     <ClCompile Include="SWEA\5650.cpp" />
     <ClCompile Include="Tower of DAT\04.cpp" />
