--- a/Algorithm.vcxproj
+++ b/Algorithm.vcxproj
@@ -20,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="08.cpp" />
+    <ClCompile Include="2382.cpp" />
     <ClCompile Include="Baekjoon\11720.cpp" />
     <ClCompile Include="Baekjoon\14501.cpp" />
     <ClCompile Include="Baekjoon\15649.cpp" />
@@ -30,6 +31,7 @@
     <ClCompile Include="Imp_09.cpp" />
     <ClCompile Include="Imp_10.cpp" />
     <ClCompile Include="SWEA\5650.cpp" />
+    <ClCompile Include="test.cpp" />
     <ClCompile Include="Tower of DAT\04.cpp" />
     <ClCompile Include="Tower of DAT\06.cpp" />
     <ClCompile Include="Tower of DAT\07.cpp" />
